Portals/_default/Skins/DNNSummit/css/content.css
/* ... */
	.session_live_link {
		position: relative;
		z-index: 11;
	}
	.session__author__video .fa-stack { font-size: 0.65em; }
	/* Video Icon Colors */
	.session__item.cat-one .text-primary { color: #2F6470; } /* Turqouise */
	.session__item.cat-two .text-primary { color: #E57D3C; } /* Orange */
	.session__item.cat-three .text-primary { color: #727126; } /* Green */
	.session__item.cat-four .text-primary { color: #6f255f; } /* Purple */
	.session__item.cat-five .text-primary { color: #1E345D; } /* Navy Blue */
	.session__item.cat-six .text-primary { color: #886114; } /* Brown */

/* Session Description */
.session__description {
	display: none;
	padding: 10px 25px 0;
	vertical-align: top;
	width: 100%;
}
.session__item.open .session__description { display: block; }

	@media only screen and (min-width: 768px) {
		.session__item.open .session__description { display: table-cell; }
		.session__description {
			display: table-cell;
			border-top: 1px solid #ccc;	
			padding-top: 25px;	
			width: 65%; 
		}
	}
.session__description p {
	font-size: 17px;
	font-weight: 300;
	line-height: 27px;
	margin-bottom: 26px;
}
.session__description ol,
.session__description ul { margin-bottom: 26px; }
.session__description ol li,
.session__description ul li {
	font-size: 17px;
	font-weight: 300;
	line-height: 27px;
	margin-bottom: 10px;
}

/* Session Tags */
.session__tags {
	font-size: 15px;
	font-weight: 400;
	margin-top: 15px;
}
.session__tags__header { font-weight: 600;}

/* Session Tags Colors */
.session__item.cat-one .session__tags__header { color: #2F6470; } /* Turqouise */
.session__item.cat-two .session__tags__header { color: #E57D3C; } /* Orange */
.session__item.cat-three .session__tags__header { color: #727126; } /* Green */
.session__item.cat-four .session__tags__header { color: #6f255f; } /* Purple */
.session__item.cat-five .session__tags__header { color: #1E345D; } /* Navy Blue */
.session__item.cat-six .session__tags__header { color: #886114; } /* Brown */

/* ------------------------------------------------------------------------------------ 
	#Sponsors
------------------------------------------------------------------------------------ */
#page-103 hr { margin: 30px 0; }
#page-103 #footer-sponsor { display: none; }

/* Sponsor Title Boxes */
.sponsor-summary-section .col-sm-2 { float: left; width: 50%; }
.sponsor-title-boxes  {
    border: 1px solid;
    margin-top: 30px;
    padding: 10px 0;
    position: relative;
}
.sponsor-title-boxes:before {
	background: url("../imgs/sponsor-box-arrow.png") no-repeat center;
	bottom: -10px;
	content: "";
	display: inline-block;
	height: 10px;
	left: 0;
	position: absolute;
	width: 100%;
}
.sponsor-title-boxes + a {
	height: 100%;
	left: 0;
	position: absolute;
	top: 0;
	width: 100%;
}

@media only screen and (min-width: 768px) {
	/* Sponsor Title Boxes */
	.sponsor-summary-section .col-sm-2 { width: 33.33333%; }
}

@media only screen and (min-width: 992px) {
	/* Sponsor Title Boxes */
	.sponsor-summary-section .col-sm-2 { width: 16.66667%; }
}


/* Sponsor Thank You Link
------------------------------------------------------------------------------------ */
.sponsor-link { display: none; }
@media only screen and (min-width: 600px) {
	.sponsor-link {
		background: #fff;
	    border-radius: 5px 5px 0 0;
	    display: block;
	    margin-left: -8%;
	    padding: 4px 15px;
	    position: absolute;
	    right: 0;
	    top: -104px;
	}
}


/* ------------------------------------------------------------------------------------ 
	#Location
------------------------------------------------------------------------------------ */
.location-section-link {
	height: 100%;
	left: 0;
	position: absolute;
	top: 0;
	width: 100%;
}


/* ------------------------------------------------------------------------------------ 
	#Styled Content
------------------------------------------------------------------------------------ */
.blog-skin #content { padding: 65px 0; }

